<resources>
    <string name="app_name">CAB</string>
    <string name="driver">I\'m Driver</string>
    <string name="custmor">I\'m Customer</string>
    <string name="driver_login">Driver Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="account">Don\'t have account ?</string>
    <string name="register"> Register</string>
    <string name="customer_login">Customer Login</string>
    <string name="title_activity_driver_map">Map</string>
    <string name="logout">Logout</string>
    <string name="setting">Setting</string>
    <string name="title_activity_customer_map">Map</string>
    <string name="call">Call A Car</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
