<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerMapActivity">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true" />

    <RelativeLayout
        android:id="@+id/rel1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/call_car_but"
        android:layout_margin="10dp"
        android:background="@drawable/button_shape"
        android:visibility="gone">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image_driver"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_below="@+id/app_bar_settings"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:padding="3dp"
            android:src="@drawable/profile"
            app:civ_border_color="#c880ff"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/name_driver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_toRightOf="@+id/profile_image_driver"
            android:text="Driver Name"
            android:textColor="@android:color/white"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/phone_driver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_driver"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:layout_toRightOf="@+id/profile_image_driver"
            android:text="Driver Phone Number"
            android:textColor="@android:color/white"
            android:textSize="14dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/car_name_driver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone_driver"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:layout_toRightOf="@+id/profile_image_driver"
            android:text="Driver Car Name"
            android:textColor="@android:color/white"
            android:textSize="14dp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:src="@drawable/phone"
            android:tint="@android:color/black" />

    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/customer_logout_but"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#c880ff"
        android:fontFamily="casual"
        android:padding="10dp"
        android:text="@string/logout"
        android:textAlignment="center"
        android:textSize="18dp"
        android:textStyle="bold"
        map:cornerRadius="10dp"
        map:elevation="5dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/customer_setting_but"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:backgroundTint="#c880ff"
        android:fontFamily="casual"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/setting"
        android:textAlignment="center"
        android:textSize="18dp"
        android:textStyle="bold"
        map:cornerRadius="10dp"
        map:elevation="5dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/call_car_but"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:backgroundTint="#c880ff"
        android:fontFamily="casual"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/call"
        android:textAlignment="center"
        android:textSize="18dp"
        android:textStyle="bold"
        map:cornerRadius="10dp"
        map:elevation="5dp" />

</RelativeLayout>